kubernetes/applications/media/servarr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - name: web
      port: 80
      targetPort: http
