kubernetes/applications/media/servarr/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    gethomepage.dev/description: Movie Collection Manager
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Servarr
    gethomepage.dev/icon: radarr.png
    gethomepage.dev/name: Radarr
spec:
  ingressClassName: cilium
  rules:
    - host: &host radarr.costanza.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
  tls:
    - hosts:
        - *host
